# ros-e-software

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json
helloWord/helloAudio/: README.md  amplifierControl_MAX9744.py  helloPlaySound.py  pocketSphinxTest.py  recorder.py
helloWord/helloCamera/: README.md  simple_camera.py
helloWord/helloEyes/: GFX.py  SSD1306.py  helloDisplay.py  i2cWrapper.py
helloWord/helloGPIO/: helloGpioInput.py  helloGpioOutput.py
helloWord/helloI2C/: README.md  helloI2C.py
helloWord/helloReSpeaker/: README.md  combined.py  doa.py  doa_publisher.py  helloReSpeaker.py  respeakerInterface.py  vad.py
helloWord/helloRedis/: README.md
helloWord/helloRedis/CPP/: compile.sh  helloRedis  helloRedis.cpp  helloRedisPublisher  helloRedisPublisher.cpp  (+2 more)
helloWord/helloUART/: helloUart.py
helloWord/test/: clickCommandInterface.py  testI2C.py
node/: .gitignore  init.sh
node/node-tool-api/: README.md  api.js  config.js  package-lock.json  package.json
node/node-tool-frontend/: README.md  app.js  package-lock.json  package.json
node/rose-api/: api.js  package-lock.json  package.json
node/rose-frontend/: app.js  package-lock.json  package.json
node/rose-node-tool/: api.js  autostart.js  config.js  node_handle.js  node_tool.js  package-lock.json  package.json  testing.js
node/testServer/: app.js  package-lock.json  package.json
ros2/: README.md
ros2/ros_ws/src/light_sim_py/: package.xml  setup.cfg  setup.py
ros2/ros_ws/src/light_sim_py/light_sim_py/: client.py  service.py
setup/: installation.sh  nginx-config.txt
(+120 files in other folders)
