<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>light_sim_py</name>
  <version>0.1.0</version>
  <description>simulated light service</description>
  <maintainer email="oskar.lorenz@th-wildau.de">Oskar Lorenz</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <exec_depend>light_sim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
